--- a/app/src/main/res/layout/activity_level_1_1.xml
+++ b/app/src/main/res/layout/activity_level_1_1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -60,4 +60,4 @@
         android:text="이 중에서 골라주세요~"
         tools:layout_editor_absoluteX="30dp"
         tools:layout_editor_absoluteY="52dp" />
-</android.support.constraint.ConstraintLayout>
+</android.support.RelativeLayout>
