--- a/app/src/main/res/layout/activity_level_1_3.xml
+++ b/app/src/main/res/layout/activity_level_1_3.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -61,4 +60,4 @@
         android:text="VS"
         tools:layout_editor_absoluteX="183dp"
         tools:layout_editor_absoluteY="246dp" />
-</android.support.constraint.ConstraintLayout>
+</android.support.RelativeLayout>
