--- a/app/src/main/res/layout/activity_level2_1.xml
+++ b/app/src/main/res/layout/activity_level2_1.xml
@@ -10,6 +10,13 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     >
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="이 중에서 선택해주세욤"
+        android:textSize="15dp"/>
+
     <Button
         android:id="@+id/btn2_1"
         android:layout_width="wrap_content"
