--- a/app/src/main/res/layout/activity_level2_2.xml
+++ b/app/src/main/res/layout/activity_level2_2.xml
@@ -11,6 +11,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1.5">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="이 중에서 선택해주세욤"
+            android:textSize="15dp"/>
+
         <Button
             android:id="@+id/btn2_1_1"
             android:layout_width="wrap_content"
