--- a/app/src/main/res/layout/activity_leveliamfull.xml
+++ b/app/src/main/res/layout/activity_leveliamfull.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="yul.com.selectiondisorder.LeveliamfullActivity">
+    tools:context="yul.com.selectiondisorder.Level2_1Activity">
 
     <TextView
         android:id="@+id/getout"
